--- a/src/radio.scss
+++ b/src/radio.scss
@@ -48,6 +48,10 @@ $block: #{$fd-namespace}-radio;
     align-items: center;
     overflow: hidden;
     padding: $fd-radio-outer-circle-margin 0 $fd-radio-outer-circle-margin $fd-radio-outer-circle-margin;
+    
+    @include fd-rtl() {
+      padding: $fd-radio-outer-circle-margin $fd-radio-outer-circle-margin $fd-radio-outer-circle-margin 0;
+    }
 
     &::before {
       content: "";
@@ -61,9 +65,17 @@ $block: #{$fd-namespace}-radio;
       font-family: "SAP-icons";
       background-color: var(--sapField_Background);
       margin-right: $fd-radio-outer-circle-margin;
+      margin-left: 0;
       color: var(--sapSelectedColor);
       border: var(--sapField_BorderWidth) solid var(--sapField_BorderColor);
       border-radius: 50%;
+    }
+
+    @include fd-rtl() {
+      &::before {
+        margin-left: $fd-radio-outer-circle-margin;
+        margin-right: 0;
+      }
     }
 
     @include fd-hover() {
@@ -120,12 +132,23 @@ $block: #{$fd-namespace}-radio;
     + .#{$block}__label {
       padding: $fd-radio-outer-circle-margin-compact 0 $fd-radio-outer-circle-margin-compact $fd-radio-outer-circle-margin-compact;
 
+      @include fd-rtl() {
+        padding: $fd-radio-outer-circle-margin-compact $fd-radio-outer-circle-margin-compact $fd-radio-outer-circle-margin-compact 0;
+      }
       &::before {
         font-size: 0.4375rem;
         height: $fd-radio-inner-circle-diameter-compact;
         width: $fd-radio-inner-circle-diameter-compact;
         min-width: $fd-radio-inner-circle-diameter-compact;
         margin-right: $fd-radio-outer-circle-margin-compact;
+        margin-left: 0
+      }
+
+      @include fd-rtl() {
+        &::before {
+          margin-left: $fd-radio-outer-circle-margin-compact;
+          margin-right: 0;
+        }
       }
     }
 
